# MyCPPCliWrapper

./: .gitignore  CMakeLists.txt  MyCppCliWrapper.nuspec  README.md  build_cpp_clr.bat
MyCSharpApp/: MyCSharpApp.csproj  Program.cs
MyCppCliWrapper/: CMakeLists.txt  MyCppCliWrapper.cpp  MyCppCliWrapper.h
MyCppLibrary/: CMakeLists.txt  MyCppLibrary.cpp  MyCppLibrary.h
